criado parser e tokens de palavras reservadas

--- a/Lab01 Análise Léxica/makefile
+++ b/Lab01 Análise Léxica/makefile
@@ -1,8 +1,10 @@
 all:
+	rm *.java
+	rm *.class
 	javacc Parser.jj
 	javac *.java
 	clear
-	java Parser entrada.in
+	java Parser entrada.pas
 	rm *.java
 	rm *.class
 clean:
